--- a/src/components/admin/styles/adminMenu.css
+++ b/src/components/admin/styles/adminMenu.css
@@ -4,7 +4,6 @@
     height: 100%;
     background: linear-gradient(180deg, var(--lilas), var(--azul));
     border-left: 10px solid var(--azul);
-    transition: 0.5s;
     overflow: hidden;
 }
 
@@ -22,6 +21,7 @@
     list-style: none;    
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
+    transition: .5s;
 }
 
 .adminmenu ul li:hover{
@@ -31,4 +31,34 @@
 .adminmenu ul li:nth-child(1){
     margin-bottom: 80px;
     pointer-events: none;
+}
+
+.adminmenu ul li img{
+    width: 120px;
+    margin-left: 75px;
+    transition: 0.5s;
+}
+
+.adminmenu ul li a{
+    text-decoration: none;
+    display: flex;
+    color: var(--branco);
+}
+
+.adminmenu ul li a:hover{
+    color: var(--azul);
+}
+
+.adminmenu ul li a .icon{
+    min-width: 60px;
+    height: 60px;
+    line-height: 75px;
+    font-size: 1.75rem;
+}
+
+.adminmenu ul li a .texto{
+    padding: 0 10px;
+    height: 60px;
+    line-height: 70px;
+    white-space: nowrap;
 }
